--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/scriberlify-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Scribe-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scriberlify</title>
+    <title>Scribe</title>
   </head>
   <body>
     <div id="root"></div>
